--- a/WorkInterruption/src/main/res/menu/list.xml
+++ b/WorkInterruption/src/main/res/menu/list.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_list"
-        android:title="@string/action_list"
+    <item android:id="@+id/action_main"
+        android:title="@string/app_name"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
