--- a/Application/src/main/res/layout/doing_row.xml
+++ b/Application/src/main/res/layout/doing_row.xml
@@ -1,49 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-              android:layout_width="match_parent"
-
-              android:layout_height="wrap_content">
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/row"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ImageView
-
             android:id="@+id/icon"
-
             android:layout_width="30dp"
-
             android:layout_height="24dp"
-
             android:layout_marginLeft="4dp"
-
             android:layout_marginRight="8dp"
-
             android:layout_marginTop="8dp"
-
-            android:src="@drawable/ic_launcher">
-
-    </ImageView>
-
+            android:src="@drawable/ic_launcher"/>
 
     <TextView
             android:id="@+id/began"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:lines="1"
-            android:text="@+id/TextView01"
-            android:textSize="24dp" />
-    <TextView
-            android:id="@+id/category"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:lines="1"
-            android:text="@+id/TextView01"
-            android:textSize="24dp" />
+            android:text="Sun 07.09"/>
+
     <TextView
             android:id="@+id/duration"
             android:layout_weight="1"
@@ -51,8 +30,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:lines="1"
-            android:text="@+id/TextView01"
-            android:textSize="24dp" />
+            android:text="10h 10m"/>
 
+    <TextView
+            android:id="@+id/category"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:lines="1"
+            android:text="My Category"/>
 
 </LinearLayout>
